--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,41 @@
+certifi==2025.6.15
+charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+filelock==3.18.0
+fsspec==2025.5.1
+huggingface-hub==0.33.0
+idna==3.10
+Jinja2==3.1.6
 joblib==1.5.1
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
 nltk==3.9.1
 numpy==2.2.6
+packaging==25.0
 pandas==2.3.0
+pillow==11.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
+PyYAML==6.0.2
 rake-nltk==1.0.6
 regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.15.3
+sentence-transformers==4.1.0
 six==1.17.0
+sympy==1.14.0
 tabulate==0.9.0
 textblob==0.19.0
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.7.1
 tqdm==4.67.1
+transformers==4.52.4
+typing_extensions==4.14.0
 tzdata==2025.2
+urllib3==2.4.0
 wcwidth==0.2.13
